<resources>
    <string name="app_name">Royal Exams</string>

    <!--    Login   -->
    <string name="logintitle">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="parentPageTitle"><u>Monitor Your Kid(s) Progress</u>.</string>

    <string name="please_wait">Please Wait</string>
    <string name="correct_answer"><![CDATA[<b><font color=#0000FF>| Correct </font></b>]]></string>
    <string name="wrong_answer"><![CDATA[<b><font color=#0000FF>| Wrong </font></b>]]></string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!--    Kid details-->
    <string name="firstname">Nelson</string>
    <string name="lastname">Rasugu</string>
    <string name="name_of_school">Josu Academy</string>
    <string name="class_in">Class six</string>
    <string name="location">Nairobi</string>
    <string name="parent_id">Parent Username</string>
    <string name="addkid"> ADD KID </string>

</resources>
