<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:theme="@style/AppTheme"
    tools:context=".Activities.AddKid">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_app_icon" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorBlack"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:textColorHint="@color/colorBlack"
        android:textSize="18dp"
        android:ems="14"
        android:padding="8dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="18dp"
        android:ems="14"
        android:padding="8dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <EditText
        android:id="@+id/classname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"
        android:hint="@string/class_in"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="18dp"
        android:ems="14"
        android:padding="8dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />

    <EditText
        android:id="@+id/schoolname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"
        android:hint="@string/name_of_school"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="18dp"
        android:ems="14"
        android:padding="8dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classname" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"
        android:hint="@string/location"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="18dp"
        android:ems="14"
        android:padding="8dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolname" />

    <Button
        android:id="@+id/addkid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addkid"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

</androidx.constraintlayout.widget.ConstraintLayout>