<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/display"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:background="@drawable/schoolfix_background"
    android:theme="@style/RoyalExams">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:textSize="30dp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edEmail"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorBlack"
                android:hint="@string/email">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edpassword"
                android:inputType="textPassword"
                android:textColorHint="@color/colorBlack"
                android:hint="@string/password">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:enabled="false"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            android:text="@string/logintitle"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:cornerRadius="1000dp">
        </com.google.android.material.button.MaterialButton>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Or"
            android:textColor="@color/colorWhite"
            android:padding="6dp"
            android:gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp">
            </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            android:text="Sign Up"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:cornerRadius="1000dp">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</ScrollView>